syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.common";

package com.glance.spaces.zapp.content.common;

message Logo {
  string image_url = 1;
  string content_description = 2;
}